--- a/server/package.json
+++ b/server/package.json
@@ -2,13 +2,18 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "dependencies": {
     "express": "^4.18.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.3"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "dev": "tsnd src/server.ts"
   },
   "keywords": [],
   "author": "",
